--- a/style.css
+++ b/style.css
@@ -38,9 +38,16 @@ margin-left: 20px;
 
 p { text-align: center;
      color: white;
+}
+ 
+footer { text-align: center;
+    color: white;
 
 
+}
 
+h3 { text-align: center;
+  color: white;
 
 
 }
