--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body, h1, h2, h3 ul {
   margin:0; 
   padding:0;
  color: white;
+ text-align: center;
 }
 
 body  { 
@@ -40,7 +41,7 @@ p { text-align: center;
      color: white;
 }
  
-footer { text-align: center;
+footer { text-align: end;
     color: white;
 
 
