--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body, h1, h2, h3 ul {
 body  { 
 background-color: rgba(248, 236, 197, 0.874);
 font-family: 'Times New Roman', Times, serif;
-color: white;
+color: black;
 }
 
 
@@ -38,17 +38,17 @@ margin-left: 20px;
 }
 
 p { text-align: center;
-     color: white;
+     color: black;
 }
  
 footer { text-align: center;
-    color: white;
+    color: black;
     text-indent: 30px;
 
 }
 
 h3 { text-align: center;
-  color: white;
+  color: black;
 
 
 }
