--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body, h1, h2, h3 ul {
 
   margin:0; 
   padding:0;
- color: white;
+ color: rgb(0, 0, 0);
  text-align: center;
 }
 
@@ -23,7 +23,7 @@ padding: 20px;
 }
 
 nav ul {
-color: white;
+color: rgba(41, 8, 255, 0.397);
   list-style: none;
 
 }
@@ -52,4 +52,3 @@ h3 { text-align: center;
 
 
 }
-
