--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-
-
-
 style.css 
 
 body, h1, h2, h3 ul {
@@ -9,6 +6,11 @@ body, h1, h2, h3 ul {
   padding:0;
  color: rgb(0, 0, 0);
  text-align: center;
+ @font-face {
+  font-family: 'Something Straight';
+  src: url(Something Straight.ttf);
+
+ }
 }
 
 body  { 
